--- a/html/myMusic.html
+++ b/html/myMusic.html
@@ -81,6 +81,7 @@
                 <div class="operation">
                   <a class="btn add" href="#" title="添加到播放列表"></a>
                   <a class="btn favor" href="#" title="收藏"></a>
+                  <a class="btn toMusicList" href="#" title="添加到歌单"></a>
                   <a class="btn share" href="#" title="分享"></a>
                   <a class="btn download" href="#" title="下载"></a>
                   <a class="btn delete" href="#" title="删除"></a>
