--- a/html/search.html
+++ b/html/search.html
@@ -83,6 +83,7 @@
                 <div class="operation">
                   <a class="btn add" href="#" title="添加到播放列表"></a>
                   <a class="btn favor" href="#" title="收藏"></a>
+                  <a class="btn toMusicList" href="#" title="添加到歌单"></a>
                   <a class="btn share" href="#" title="分享"></a>
                   <a class="btn download" href="#" title="下载"></a>
                 </div>
@@ -95,17 +96,6 @@
             </li>
           </ul>
         </div>
-      </div>
-      <div class="search_page">
-        <a class="abcd" href="#">
-          <上一页< /a>
-            <a class="abce" href="#">1</a>
-            <a class="abc" href="#">2</a>
-            <a class="abc" href="#">3</a>
-            <a class="abc" href="#">4</a>
-            <a class="abc" href="#">5</a>
-            <a class="abc" href="#">...</a>
-            <a class="abcd" href="#">下一页></a>
       </div>
     </div>
   </div>
@@ -151,6 +141,27 @@
 
     <!-- 音乐信息组件 -->
     <div class="music_info"></div>
+  </div>
+  <div class="win_box">
+    <div class="win_nav">
+      <p>添加到歌单</p>
+      <a class="close" href="#" title="关闭"></a>
+    </div>
+    <div class="musicList_list">
+      <ul>
+          <li class="item_other">
+              <div class="item_pic">
+                  <img src="../images/valorant.png" alt="">
+              </div>
+              <div class="item_info">
+                  <span class="num">1</span>
+                  <h3>Valorant</h3>
+              </div>
+          </li>
+          
+      </ul>
+  </div>
+    
   </div>
   <script src="../js/search.js"></script>
   <script src="../js/top.js"></script>
