--- a/html/search.html
+++ b/html/search.html
@@ -22,20 +22,18 @@
           <a href="#">网易云音乐</a>
         </h1>
         <ul class="list">
-          <li><a href="#" class="item">发现音乐</a></li>
-          <li><a href="#" class="item">排行榜</a></li>
+          <li><a href="index.html" class="item">发现音乐</a></li>
           <li><a href="#" class="item">歌单</a></li>
-          <li><a href="#" class="item">歌手</a></li>
           <li><a href="#" class="item">我的音乐</a></li>
-          <li><a href="#" class="item">关注</a></li>
         </ul>
       </div>
       <div class="bar-right">
         <div class="search">
           <input type="text" placeholder="搜索音乐">
-        </div>
+          <div class="suggestions"></div>
+        </div>  
         <div class="anthor">
-          <a href="#">创作者中心</a>
+          <a href="#">气泡音乐</a>
         </div>
         <div class="login">
           <a class="loginOruser" href="login.html">登录</a>
@@ -68,7 +66,8 @@
           <ul>
             <li>单曲</li>
             <li>歌手</li>
-            <li>用户</li>
+            <li>专辑</li>
+            <li>时长</li>
           </ul>
         </div>
         <div class="search-result-list">
