--- a/html/upuserdata.html
+++ b/html/upuserdata.html
@@ -28,7 +28,7 @@
         <div class="search">
           <input type="text" placeholder="搜索音乐">
           <div class="suggestions"></div>
-        </div>  
+        </div>
         <div class="anthor">
           <a href="#">气泡音乐</a>
         </div>
@@ -63,7 +63,7 @@
           <label for="female">女</label>
         </div>
         <div class="item">
-          <label for="birthday">生日(yyyy-mm-dd):</label>
+          <label for="birthday">生日:</label>
           <input type="text" id="birthday" name="birthday" value="">
         </div>
         <div class="item">
