--- a/html/upuserhead.html
+++ b/html/upuserhead.html
@@ -29,7 +29,7 @@
         <div class="search">
           <input type="text" placeholder="搜索音乐">
           <div class="suggestions"></div>
-        </div>  
+        </div>
         <div class="anthor">
           <a href="#">气泡音乐</a>
         </div>
@@ -48,7 +48,8 @@
   </div>
 
   <div class="main wrapper_02">
-    <input type="file" class="fileInput" accept="image/*">
+    <input type="file" class="fileInput" accept="image/*" id="fileInput" style="display: none;">
+    <label for="fileInput" class="custom-file-input">选择文件</label>
     <div class="container">
       <div class="left">
         <canvas class="canvas" width="300" height="300"></canvas>
