音乐分享网站v2.4

--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
           <div class="suggestions"></div>
         </div>        
         <div class="anthor">
-          <a href="#">气泡音乐</a>
+          <a href="upload.html" class="upload">上传音乐</a>
         </div>
         <div class="login">
           <a class="loginOruser" href="login.html">登录</a>
