--- a/html/upuserhead.html
+++ b/html/upuserhead.html
@@ -31,7 +31,7 @@
           <div class="suggestions"></div>
         </div>
         <div class="anthor">
-          <a href="#">气泡音乐</a>
+          <a href="upload.html" class="upload">上传音乐</a>
         </div>
         <div class="login">
           <a class="loginOruser" href="login.html">登录</a>
@@ -44,7 +44,6 @@
         </div>
       </div>
     </div>
-  </div>
   </div>
 
   <div class="main wrapper_02">
