--- a/html/search.html
+++ b/html/search.html
@@ -33,7 +33,7 @@
           <div class="suggestions"></div>
         </div>
         <div class="anthor">
-          <a href="#">气泡音乐</a>
+          <a href="upload.html" class="upload">上传音乐</a>
         </div>
         <div class="login">
           <a class="loginOruser" href="login.html">登录</a>
@@ -46,7 +46,6 @@
         </div>
       </div>
     </div>
-  </div>
   </div>
   <div class="g_nav"></div>
   <div class="g_bd wrapper_02">
