音乐分享网站v9.9

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -48,7 +48,7 @@
     <div class="personalData">
       <div class="areaLeft">
         <div class="userHead">
-          <img src="../images/userHead_01.jpg">
+          <img src="../images/默认头像.jpg">
         </div>
         <div class="btm">
           <a href="upuserhead.html" class="upload">更换头像</a>
@@ -57,22 +57,22 @@
       <div class="areaRight">
         <div class="userInfo">
           <div class="userName">
-            <span>爱笑的呆呆</span>
+            <span>用户名：</span>
             <a class="btn_sprite btn_type_01_sup edit" href="upuserdata.html">
               <i class="btn_sprite btn_type_01_sub">编辑个人资料</i>
             </a>
           </div>
           <div class="userEmail">
-            <span>电子邮箱：23688@163.com</span>
+            <span>电子邮箱：</span>
           </div>
           <div class="userArea">
-            <span>所在地区：浙江</span>
+            <span>所在地区：</span>
           </div>
           <div class="userBirth">
-            <span>生日：2000-01-01</span>
+            <span>生日：</span>
           </div>
           <div class="userGender">
-            <span>性别：男</span>
+            <span>性别：</span>
           </div>
         </div>
       </div>
