--- a/html/song.html
+++ b/html/song.html
@@ -50,7 +50,7 @@
   <div class="main wrapper_03">
     <div class="song">
       <div class="songHead">
-        <img src="../images/userHead_01.jpg">
+        <img src="../images/默认头像.jpg">
         <span class="songHeadborder"></span>
       </div>
       <div class="songInfo">
@@ -78,7 +78,7 @@
       <div class="cmmt">
         <div class="user">
           <div class="head">
-            <img src="../images/userHead_01.jpg">
+            <img src="../images/默认头像.jpg">
           </div>
           <textarea placeholder="写下你的评论..." id="tx"></textarea>
           <div class="btn">
@@ -93,7 +93,7 @@
           <li class="item">
             <div class="itm">
               <div class="head">
-                <img src="../images/userHead_01.jpg">
+                <img src="../images/默认头像.jpg">
               </div>
               <div class="cnt">
                 <a href="#" class="name">爱笑的呆呆</a>
