--- a/html/musicList.html
+++ b/html/musicList.html
@@ -58,12 +58,12 @@
         <ul>
           <li class="item_other">
             <div class="item_pic">
-              <img src="../images/valorant.png" alt="">
+              <img src="../images/默认歌曲图片.jpg" alt="">
             </div>
             <div class="item_info">
               <span class="num">1</span>
               <div class="pic"></div>
-              <h3>Valorant</h3>
+              <h3>歌单</h3>
             </div>
             <div class="item_delete">
               <a class="btn delete" href="#" title="删除"></a>
@@ -75,7 +75,7 @@
     <div class="areaRight">
       <div class="outline">
         <div class="avatar">
-          <img src="">
+          <img src="../images/默认歌曲图片.jpg">
         </div>
         <h1 class="avatar_title">
           <span class="num"></span>
