--- a/html/myMusic.html
+++ b/html/myMusic.html
@@ -49,7 +49,7 @@
   </div>
   <div class="outline">
     <div class="avatar">
-      <img src="">
+      <img src="../images/默认头像.jpg">
     </div>
     <h1 class="avatar_title">
       <span class="name"></span>
@@ -69,22 +69,7 @@
         <div class="myMusic-result-list">
           <ul>
             <li class="item1">
-              <div class="name">
-                <a class="btn1 play1" href="#" title="播放"></a>
-                <a class="num" href="#">0</a>
-                <a class="url" href="#"></a>
-                <a class="musicPic" href="#"></a>
-                <a class="title" href="#">交换余生</a>
-                <div class="operation">
-                  <a class="btn add" href="#" title="添加到播放列表"></a>
-                  <a class="btn download" href="#" title="下载"></a>
-                  <a class="btn delete" href="#" title="删除"></a>
-                </div>
-              </div>
-              <div class="detail">
-                <a href="#">林俊杰</a>
-                <a href="#">《交换余生》</a>
-                <a href="#">04:36</a>
+
               </div>
             </li>
           </ul>
